# DeepAerialMatching_pytorch

./: .gitignore  README.md  demo.py  eval.sh  eval_pck.py  install.sh  pyproject.toml  train.py
configs/: default.yaml  densenet169.yaml  resnet101.yaml  resnext101.yaml  seresnext101.yaml
data/: download.py  pck_dataset.py  synth_dataset.py
datasets/demo_img/: isprs_src_1.tif  isprs_tgt_1.tif
geotnf/: point_tnf.py  transformation.py
image/: normalization.py
model/: AerialNet.py  AerialNet_two_stream.py  loss.py
scripts/: demo.sh  eval.sh  eval_session.sh  train.sh  upload_to_hf.py
src/cli/: __init__.py  demo.py  eval.py  eval_pck.py  generate_labels.py  train.py  upload_hf.py
src/data/: __init__.py  download.py  eval_dataset.py  pck_dataset.py  synth_dataset.py  train_dataset.py
src/models/: __init__.py  aerial_net.py  backbone.py  correlation.py  layers.py  loss.py
src/preprocessing/: __init__.py  normalization.py
src/transforms/: __init__.py  geometric.py  point.py
src/utils/: __init__.py  checkpoint.py  cli_utils.py  device.py  prefetch.py  tensor.py  torch_util.py  train_test_fn.py  training.py  visualization.py
training_data/GoogleEarth-aff/: val_pair.csv
util/: checkboard.py  torch_util.py  train_test_fn.py
