[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-aerial-matching"
version = "1.0.0"
description = "Deep learning based aerial image matching using geometric transformations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jae-Hyun Park"}
]
keywords = ["deep-learning", "image-matching", "aerial-imagery", "pytorch", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=1.0.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "termcolor>=2.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
download = [
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/jaehyunnn/DeepAerialMatching_pytorch"
Repository = "https://github.com/jaehyunnn/DeepAerialMatching_pytorch"

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "data*", "transforms*", "preprocessing*", "utils*", "cli*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
